generated/checker-for-evaluation/generated/test-Out-of-Bound-ccc514b7e7acbd301219cbaec0fc0bfe5741acee/build_logs/4/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:25:17: error: ‘taint’ is not a namespace-name
   25 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In constructor ‘{anonymous}::ForLoopVisitor::ForLoopVisitor(clang::ento::CheckerContext&, const clang::ento::BugType*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:135:18: warning: ‘{anonymous}::ForLoopVisitor::BT’ will be initialized after [-Wreorder]
  135 |   const BugType *BT;
      |                  ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:131:8: warning:   ‘bool {anonymous}::ForLoopVisitor::Reported’ [-Wreorder]
  131 |   bool Reported;
      |        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:85:3: warning:   when initialized here [-Wreorder]
   85 |   ForLoopVisitor(CheckerContext &Ctx, const BugType *BT)
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:153:61: error: no matching function for call to ‘clang::ento::CheckerContext::CheckerContext(clang::ento::BugReporter&, clang::ento::AnalysisManager&, clang::SourceLocation)’
  153 |     CheckerContext Ctx(BR, Mgr, FD->getBody()->getBeginLoc());
      |                                                             ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:14:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note: candidate: ‘clang::ento::CheckerContext::CheckerContext(clang::ento::NodeBuilder&, clang::ento::ExprEngine&, clang::ento::ExplodedNode*, const clang::ProgramPoint&, bool)’
   41 |   CheckerContext(NodeBuilder &builder,
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note:   candidate expects 5 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(const clang::ento::CheckerContext&)’
   24 | class CheckerContext {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(clang::ento::CheckerContext&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 3 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
